# vin_display

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  display.c  fpanel.c  fpanel.h  fsdata.c  hdsp2112.c  hdsp2112.pio  hdsp2112.pio.h  http_server.c  http_server.h  lwipopts.h  main.c  makefsdata.py  mdl2416c.c  mdl2416c.h  mdl2416c.pio  mdl2416c.pio.h  readme.md  settings.h  timesync.c  websocket.c  websocket.h
hardware/demo_board1/: demo_board1.kicad_pcb  demo_board1.kicad_prl  demo_board1.kicad_pro  demo_board1.kicad_sch
hardware/fpanel_remote_pcb_v1/: components.kicad_sym  fpanel_remote_pcb.kicad_pcb  fpanel_remote_pcb.kicad_prl  fpanel_remote_pcb.kicad_pro  fpanel_remote_pcb.kicad_sch
hardware/fpanel_remote_pcb_v1/components.pretty/: pi_pico_w.kicad_mod
hardware/scripts/: resize_designators.py
hardware/vin_display_hdsp2000_x20/: displays.kicad_sch  displays2.kicad_sch  vin_display_hdsp2000_x20.kicad_pcb  vin_display_hdsp2000_x20.kicad_prl  vin_display_hdsp2000_x20.kicad_pro  vin_display_hdsp2000_x20.kicad_sch
hardware/vin_display_hdsp2112_x6/: displays.kicad_sch  vin_display_hdsp2112_x6.kicad_pcb  vin_display_hdsp2112_x6.kicad_prl  vin_display_hdsp2112_x6.kicad_pro  vin_display_hdsp2112_x6.kicad_sch
hardware/vin_display_mdl2416c_x10/: displays.kicad_sch  vin_display_mdl2416c_x10.kicad_pcb  vin_display_mdl2416c_x10.kicad_prl  vin_display_mdl2416c_x10.kicad_pro  vin_display_mdl2416c_x10.kicad_sch
hardware/vin_display_vqc10_x10/: displays.kicad_sch  displays_drv.kicad_sch  ibom.html  vin_display_vqc10_x10.kicad_pcb  vin_display_vqc10_x10.kicad_prl  vin_display_vqc10_x10.kicad_pro  vin_display_vqc10_x10.kicad_sch
src/: CMakeLists.txt  FreeRTOSConfig.h  buttons.c  buttons.h  buzzer.c  buzzer.h  buzzer.pio  buzzer.pio.h  command.c  command.h  dhcp_server.c  display.c  display.h  font5x7.h  fsdata.c  fsdata.h  graph.c  graph.h  hdsp2000.c  hdsp2000.h  hdsp2000.pio  hdsp2000.pio.h  hdsp2112.c  hdsp2112.h  hdsp2112.pio  hdsp2112.pio.h  http_server.c  if_uart.c  if_uart.h  knob.c  knob.h  knob.pio  knob.pio.h  lwipopts.h  main.c  mdl2416c.c  mdl2416c.h  mdl2416c.pio  mdl2416c.pio.h  timesync.h  (+10 more)
src/klipper/: autoconf.h  basecmd.c  buttons.c  command.c  gpio.c  klipper.c  klipper.h  sched.c  serial_irq.c
src/klipper/board/: irq.c  serial_irq.c  timer.c
src/klipper/scripts/: buildcommands.py
src/test/: server.py
src/www/: 404.html  index.html  main.js
static/: index.html  main.js  style.css
test/: server.py
